2007-09-24  Matthias Clasen  <mclasen@redhat.com>

	* src/applet.c (nma_menu_create): Update the icon after setting
	the icon size.

2007-09-23  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/Makefile.am
	  src/vpn-properties/nm-vpn-properties.c
	  src/vpn-properties/nm-vpn-ui-interface.h
		- Rework the VPN UI module interface so it's based on NMConnections
			rather than a bunch of random things.  Clean up the properties
			program code a bunch and use the GConf helpers common code
			for GConf stuff

2007-09-23  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/gconf-helpers.c
	  src/applet-dbus-settings.c
		- (nm_gconf_write_connection): new function; move code that writes an
			NMConnection to GConf into the GConf helpers common code

2007-09-21  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
		- (update_button_cb): fix key length for 40-bit WEP

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (foo_bssid_strength_changed, foo_wireless_state_change): use GObject
			property notification to get strength updates

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_item_activate): ensure wireless security is found; use the
			type-specific connection name rather than just "Auto"

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_ciphers_from_flags, get_security_for_ap, nma_menu_item_activate):
			autogenerate acceptable security parameters from AP information when
			a wireless network is clicked and no compatible connection has been
			defined yet

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
	  src/password-dialog.h
	  src/applet-dbus-settings.c
	  src/applet.glade
	  src/Makefile.am
		- Add a simple WEP/WPA-PSK password dialog for now
		- Remove cruft from applet glade file

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c