@@ -1,3 +1,10 @@
+2007-09-25  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dbus-settings.c
+		- (applet_dbus_connection_settings_get_secrets): handle new 'request_new'
+			parameter by asking the user for new secrets explicitly rather than
+			pulling from the keyring
+
 2007-09-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* src/applet.c (nma_menu_create): Update the icon after setting
